--- a/tailwind.css
+++ b/tailwind.css
@@ -1,12 +1,13 @@
-/* @import 'tailwindcss/base';
+@import 'tailwindcss/base';
 @import 'tailwindcss/components';
-@import 'tailwindcss/utilities'; */
-@tailwind base;
+@import 'tailwindcss/utilities';
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
-
+@tailwind utilities; */
 
 /* Your custom styles (e.g. fonts) go here */
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 @layer components {
 
